# orcaset-examples

./: .gitignore  README.md
.github/workflows/: publish.yml
apartment-rent-roll/: .gitignore  README.md  notebook.py  pyproject.toml
apartment-rent-roll/data/: main_123.json  rent_roll.json
apartment-rent-roll/model/: income.py  lease.py  model.py  unit.py
simple-model/: .gitignore  README.md  notebook.py  pyproject.toml  simple-model.py
traeger-basic-three-statement/: .gitignore  README.md  base_case.py  projections.py  pyproject.toml
traeger-basic-three-statement/historicals/: balance_sheet.py  footnotes.py  income.py
traeger-basic-three-statement/model/: balance_sheet.py  cash_flow.py  footnotes.py  income.py  model.py
